enhanced design with contribution module